--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -1206,18 +1206,18 @@ amcivwar.423.d:0 "After hasty preparations, the US squadron has come into view b
 amcivwar.423.a:0 "Let's hope for the best..."
 amcivwar.424.t:0 "Fort Sumter raid successful"
 amcivwar.424.d:0 "Success! Our small squadron was able to slip into Charleston harbour before insurgent naval forces could be mobilised, and even though they took losses from artillery shelling, they were able to link up with the loyalists after their successful breakout! \n\nThe commander of the naval squadron and many of the evacuees, who fought tooth and nail against the Syndicalists, are being honoured as heroes!"
-amcivwar.424.a:0 "Incredible!"
-amcivwar.425.t:0 "The Fort Sumter Hellgate"
-amcivwar.425.d:0 "Success! Our militia commanders successfully exploited the vulnerability of the US squadron, holding their artillery fire until the ships had laid anchor beside the fort to take on the evacuees! Fort Sumter was completely destroyed in the ensuing shelling, and so was most of the squadron - our river boat flotilla could only pick up a few dozen survivors afterwards.\n\nThe militia commander is being honoured as a hero!"
-amcivwar.425.a:0 "Incredible!"
-amcivwar.426.t:0 "The Fort Sumter Hellgate"
-amcivwar.426.d:0 "Failure! Our small squadron was able to slip into Charleston harbour, only to be lit up by an incredible artillery barrage apparently out of nowhere! Our info - coming from the Fort Sumter radio station - is thin, but it seems that after the squadron had been obliterated, the few survivors in Fort Sumter itself surrendered as well.\n\nThe squadron commander would now be facing a trial for his sever failures - if he was still alive, that is."
-amcivwar.426.a:0 "Damn it!"
-amcivwar.427.t:0 "Fort Sumter siege failed"
-amcivwar.427.d:0 "Failure! Our artillery was unable to hold back the small US squadron from evacuating the counter-revolutionaries. Even though losses were minimal, this is still a blow to the prestige of the Union State! \n\nThe commander of our militia forces will face a tribunal for his failures shortly."
-amcivwar.427.a:0 "Damn it!"
+amcivwar.424.a:0 "대단하군!"
+amcivwar.425.t:0 "포트 섬터가 지옥이 되다"
+amcivwar.425.d:0 "성공! 우리의 민병대 지휘관들은  배들이 탈주자들을 태우기 위해 포트 옆에 앵커를 놓기 전까지 함포 사격을 대기 시킴 으로서 미합 중국 함대의 약점을 성공적으로 타격했습니다, 포트 섬터와 대부분의 함대는 확실한 포격후에 철저히 파괴 되었습니다. - 아군 리버 보트 함대가 후에 약간의 생존자 몇을 건질 수 있었습니다. \n\n민병대 지휘관은 영웅으로 추대될 자격이 있습니다!"
+amcivwar.425.a:0 "대단하군!"
+amcivwar.426.t:0 "포트 섬터가 지옥이 되다"
+amcivwar.426.d:0 "실패! 우리의 소규모 함대는 찰스턴 항구로 진입 할 수 있었지만 어디서 온지 모를 대규모 해안포 사격에 태워졌을 뿐이었습니다! 포트 섬터 라디오 스테이션에서 우리의 미약한 정보망은, 함대가 괴멸된 후 포트 섬터에 남아있던 몇명의 생존자들도 항복했다고 전했습니다. \n\n함대 지휘관은 그의 대실패로 군사 재판에 출두해야 할 것 입니다 - 그가 살아 있다면 말이죠."
+amcivwar.426.a:0 "젠장!"
+amcivwar.427.t:0 "포트 섬터 함락 실패"
+amcivwar.427.d:0 "실패! 아군의 포병이 반-혁명 주의자들로부터 달아나는 미합 중국의 소규모 함대를 막아내지 못했습니다. 손실은 적었지만 그럼에도 불구하고 이것은  연방의 위신에 큰 타격입니다! \n\n 우리 민병대의 지휘관은 곧 이 실패에 대한 군사 재판소에 나오게 될 것입니다."
+amcivwar.427.a:0 "젠장!"
 
-amcivwar.500.t:0 "Fate of the Unions"
-amcivwar.500.d:0 "With the civil war now over, it is time to decide the fate of the Labour Unions. Most of the Labour Unions were part of the Combined Syndicates of America Federation and took up arms with the outbreak of the conflict. More conservative elements are wanting us to ban them as a punishment for taking up arms while others are advocating clemency as a way to rebuild America."
-amcivwar.500.a:0 "Allow the Unions"
-amcivwar.500.b:0 "Ban the Unions"
+amcivwar.500.t:0 "노동 조합의 운명"
+amcivwar.500.d:0 "내전의 종식에 따라, 노동 조합의 운명을 결정할 시간이 왔습니다. 대부분의 노동 조합원들은 CSA의 일원이였고 내전에서 CSA에 편에 서서 무기를 들었습니다. 더 많은 보수파는 우리가 조합을 금지하길 원하지만 진보파는 새로운 미합 중국을 재건하기 위해 그들에게 관용을 베풀것을 지지하고 있습니다.."
+amcivwar.500.a:0 "조합을 승인하라"
+amcivwar.500.b:0 "조합을 금지시켜라"
