--- a/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
@@ -844,11 +844,11 @@ ott.115.a:0 "그들을 체포하라! 예외는 없다!"
 ott.115.b:0 "모든 범죄자들을 용서하고, 조사를 끝내라"
 
 ott.116.t:0 "콘스탄티노플 군단이 체포를 저지한다"
-ott.116.d:0 "MehmedCavidBey와 7명의 다른 정치인들을 체포하려던 경찰관들은 오늘 콘스탄티노플 군단의 군인들에 의해 저지당했다. 육군 부대는 체포를 막고 Mehmed Cavid Bey와 다른 이들을 알 수없는 위치에 숨겼습니다. 무슨 일이 일어나고 있는지 큰 혼란이다."
+ott.116.d:0 "Mehmed Cavid Bey와 7명의 다른 정치인들을 체포하려던 경찰관들은 오늘 콘스탄티노플 군단의 군인들에 의해 저지당했다. 육군 부대는 체포를 막고 Mehmed Cavid Bey와 다른 이들을 알 수없는 위치에 숨겼습니다. 무슨 일이 일어나고 있는지 큰 혼란이다."
 ott.116.a:0 "무슨 일이야?!"
 
 ott.117.t:0 "무장 쿠데타"
-ott.117.d:0 "상황은 콘스탄티노플 군단이 가두 행진을 벌이고 계엄령을 선포하자 급속히 악화되었다. 한시간 안에, 육군 부대는 도시 전역에 있는 오스만 터키 정부, 주요 도로, 다리, 전신 방송국을 장악했다. 두명의 무장한 민간인이 이끄는 대대적인 군인들 또한 왕실 궁으로 이동하는 것으로 보도되었다."
+ott.117.d:0 "상황은 콘스탄티노플 군단이 가두 행진을 벌이고 계엄령을 선포하자 급속히 악화되었다. 한시간 안에, 육군 부대는 도시 전역에 있는 터키 정부, 주요 도로, 다리, 전신 방송국을 장악했다. 두명의 무장한 민간인이 이끄는 대대적인 군인들 또한 왕실 궁으로 이동하는 것으로 보도되었다."
 ott.117.a:0 "어 오..."
 
 ott.118.t:0 "궁전 습격"
@@ -866,7 +866,7 @@ ott.120.d:0 "-"
 ott.120.a:0 "-"
 
 ott.121.t:0 "오스만이 Golden Horn을 건너다"
-ott.121.d:0 "Osman Fuad의 예상치 못한 기병 공격에 대처하기 위해 Teceddüt당은 Dolmabahçe 궁전을 강화하기 위해 2 개의 육군 대대를 보냈습니다. 그러나 궁전에 도착하자마자 두 부대는 모두 지휘관에게 불복하여 잘 싸우는 왕자를 지원하기 위해 진영을 바꿨다. Odman Fuad는 신뢰할 수있는 장교들이 지휘하도록 임명한 후, 충직한 근왕 보병 대대를 배치하여 궁전을 지키고 다른 대대를 의회로 이끌고 갔다. 의회에서 저항에 직면한 Osman Fuad는 그의 보병을 주요 도로 방어에 배치하고 기병과 함께 행진했다. 정예 Ertuğrul 기병 연대는 곧 반군 조직이 장악하고 있는 갈라타 다리에 도착했다. 연대는 - Ayasofya Mosque에서 술탄과 만나기 위해 매주 이 다리를 정기적으로 건넜다 - 북쪽의 반역자들을 물리쳤고 다리 건너편에서 교전을 벌여 남쪽의 반란군을 궤멸시켰다. 오스만 터키 정부는 그들 앞에 높은 언덕 위에 놓여있고 반란군에 의해 방어되고 있다."
+ott.121.d:0 "Osman Fuad의 예상치 못한 기병 공격에 대처하기 위해 Teceddüt당은 Dolmabahçe 궁전을 강화하기 위해 2 개의 육군 대대를 보냈습니다. 그러나 궁전에 도착하자마자 두 부대는 모두 지휘관에게 불복하여 잘 싸우는 왕자를 지원하기 위해 진영을 바꿨다. Odman Fuad는 신뢰할 수있는 장교들이 지휘하도록 임명한 후, 충직한 근왕 보병 대대를 배치하여 궁전을 지키고 다른 대대를 의회로 이끌고 갔다. 의회에서 저항에 직면한 Osman Fuad는 그의 보병을 주요 도로 방어에 배치하고 기병과 함께 행진했다. 정예 Ertuğrul 기병 연대는 곧 반군 조직이 장악하고 있는 갈라타 다리에 도착했다. 연대는 - Ayasofya Mosque에서 술탄과 만나기 위해 매주 이 다리를 정기적으로 건넜다 - 북쪽의 반역자들을 물리쳤고 다리 건너편에서 교전을 벌여 남쪽의 반란군을 궤멸시켰다. 터키 정부는 그들 앞에 높은 언덕 위에 놓여있고 반란군에 의해 방어되고 있다."
 ott.121.a:0 "앞으로, 자비를 베풀지 마라!"
 
 ott.122.t:0 "-"
@@ -881,7 +881,7 @@ ott.124.t:0 "-"
 ott.124.d:0 "-"
 ott.124.a:0 "-"
 
-ott.125.t:0 "Osman captures the Sublime Porte"
+ott.125.t:0 "오스만은 터키 정부를 점령했다"
 ott.125.d:0 "Osman Fuad marched his regiment uphill to take the War Ministry and end the rebellion where it began. After hours of heavy fighting across the Bab-i Ali Avenue, Osman and his cavalry routed the remaining rebels and captured the ministries. Once in control of the War Ministry, Osman Fuad Efendi had radio orders sent to all units of the Constantinople Corps to return to their barracks, and spent the rest of the night organising cleanup operations across the city. Some rebels tried to escape by boats while many others simply surrendered. By dawn, all that remained of the rebellion were the bodies and the smell of gunpowder."
 ott.125.a:0 "A great victory!"
 
