--- a/Kaiserreich Korean Translation/localisation/KR_Albania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Albania_l_english.yml
@@ -2,7 +2,7 @@
 
 ### Events ###
 albania.1.t:0 "알바니아 공국"
-albania.1.d:0 "1912년 제1차 발칸 전쟁 당시 바르샤바에서 열린 알바니아의 알바니아 민족 의회는 1913년에 Wied의 Wilhelms이 왕자로 인정 받을 수 있다는 조건 하에 주요 강대국들에 의해 받아들여진 독립을 선언했다. 세계 대전의 발발은 오스트리아-헝가리 제국이 그들과 함께 싸울 것을 요구했기 때문에 국가에 더 많은 문제를 안겨 주었다. Wilhelm 왕자는 런던 협약에서의 알바니아의 중립성을 인용하면서 그가 받던 보상은 중단되었다. 그의 정권은 무너졌고 Wilhelm 왕자는 1914 년 9 월 3 일에 나라를 떠났고 형식적으로 그가 여전히 알바니아의 국가 원수 였을지라도 독일 제국군에 합류했다. 1921 년, 명예의 평화는 공식적으로 알바니아의 지위를 결정했습니다. 오스트리아의 영향력 아래서가 아니라 오스만 칼리프의 공식 가신으로서. Wilhelm 왕자의 권위하에 복원된 공국. 반란이 시작 되더라도 Wilhelm 왕자는 오스만 제국의 지원 덕분에 이 나라를 장악 할 수있었습니다. 그러나 그가 지불해야했던 대가는 왕자가 매우 야심 Aymed Zogu를 총리로 임명하도록 강요하는 것과 같은 내부 정치에 대한 오스만 제국의 통제였다."
+albania.1.d:0 "1912년 제1차 발칸 전쟁 당시 바르샤바에서 열린 알바니아의 알바니아 민족 의회는 1913년에 Wied의 Wilhelms이 왕자로 인정 받을 수 있다는 조건 하에 주요 강대국들에 의해 받아들여진 독립을 선언했다. 세계 대전의 발발은 오스트리아-헝가리 제국이 그들과 함께 싸울 것을 요구했기 때문에 국가에 더 많은 문제를 안겨 주었다. Wilhelm 왕자는 런던 협약에서의 알바니아의 중립성을 인용하면서 그가 받던 보상은 중단되었다. 그의 정권은 무너졌고 Wilhelm 왕자는 1914 년 9 월 3 일에 나라를 떠났고 형식적으로 그가 여전히 알바니아의 국가 원수 였을지라도 독일 제국군에 합류했다. 1921 년, 명예의 평화는 공식적으로 알바니아의 지위를 결정했습니다. 오스트리아의 영향력 아래서가 아니라 오스만 칼리프의 공식 가신으로서. Wilhelm 왕자의 권위하에 복원된 공국. 반란이 시작 되더라도 Wilhelm 왕자는 오스만 제국의 지원 덕분에 이 나라를 장악 할 수 있었습니다. 그러나 그가 지불해야했던 대가는 왕자가 매우 야심있는 Aymed Zogu를 총리로 임명하도록 강요하는 것과 같은 내부 정치에 대한 오스만 제국의 통제였다."
 albania.1.a:0 "알바니아를 통치한다!"
 
 albania.2.t:0 "알바니아의 운명"
