--- a/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
@@ -6,38 +6,38 @@ afg.0.d:0 "우리 남쪽인 영국령 인도의 남은 잔해들은 에드워드
 afg.0.a:0 "기회가 되었다! 우리의 승리를 재현하자!"
 afg.0.b:0 "인도가 뭘 가졌는데? 소?"
 
-afg.1.t:0 "The Third Treaty of Rawalpindi"
-afg.1.d:0 "Catastrophe! Our campaign against the Delhi Government has been crowned with spectacular failure and our armies forced through the Pass of Khyber, fleeing in panic. The vice-roy, Ganga Singh, has offered peace - demanding a restoration of the pre-1926 borders. Unfortunately we are unable to decline, lest our very nation be destroyed..."
-afg.1.d.puppet:0 "Catastrophe! Our campaign against the Delhi Government has been crowned with spectacular failure and our armies forced through the Pass of Khyber, fleeing in panic. The vice-roy, Ganga Singh, has offered peace - demanding a restoration of the pre-1926 borders and the permanent submission of our government to theirs. Unfortunately we are unable to decline, lest our very nation be destroyed..."
-afg.1.a:0 "We yield because we have no other choice..."
+afg.1.t:0 "라왈핀디 제3차 조약"
+afg.1.d:0 "대참사! 델리 정부에 대한 우리의 군사 작전은 엄청난 실패와 우리 군대가 공황 상태에서 도피한 Khyber의 고개를 통해 강타 되었습니다. 총-독인 Ganga Singh은 1926 년 이전 국경 복원을 요구하는 평화를 제안했다. 불행히도 우리는 우리 민족이 멸망하지 않도록 쇠퇴 할 수 없습니다..."
+afg.1.d.puppet:0 "대참사! 델리 정부에 대한 우리의 군사 작전은 엄청난 실패와 우리 군대가 공황 상태에서 도피한 Khyber의 고개를 통해 강타 되었습니다. 총-독인 Ganga Singh는 1926 년 이전 국경의 복원과 우리 정부의 영구적인 굴복을 요구하는 평화를 제안했습니다. 불행히도 우리는 우리 민족이 멸망하지 않도록 쇠퇴 할 수 없습니다..."
+afg.1.a:0 "우리는 다른 선택이 없기 때문에 항복한다..."
 
-afg.2.t:0 "The Third Treaty of Rawalpindi"
-afg.2.d:0 "Victory is ours! The decadent British lapdogs in Delhi have been utterly routed and our forces are entrenched in the smouldering remains of their capital. Now might be the best time to demand concessions, whilst we still carry the lead."
-afg.2.a:0 "Let us claim Kashmir and carve a path to the Mouth of the Indus!"
-afg.2.b:0 "I shall be the emancipator and liberator of all Mohammedans in the Indus Valley!"
-afg.2.c:0 "No peace with idol-worshippers, let us complete our conquest!"
+afg.2.t:0 "라왈핀디 제3차 조약"
+afg.2.d:0 "승리는 우리 것입니다! 델리에있는 퇴폐적인 영국의 애완견들은 완전히 궤멸 되고, 우리 군대는 그들의 자본의 연기가 나는 유적에 뿌리를 내리고 있습니다. 이제는 양보를 요구하는 가장 좋은시기인 반면, 우리는 여전히 선두에서 이끌고 있습니다."
+afg.2.a:0 "우리는 카슈미르를 주장하고, 인더스의 입구로 가는 길을 개척해 나간다!"
+afg.2.b:0 "나는 인더스 계곡의 모든 모하메드 인들에 대한 해방자가 될 것이다!"
+afg.2.c:0 "우상 숭배자들과 평화는 없다. 정복을 완성한다!"
 
-afg.3.t:0 "Demands of the Emir"
-afg.3.d:0 "Curses! The Afghan dogs have completely overpowered us and have reduced our proud nation to humiliation. Now the Afghan Emir demands our surrender of the princely state of Kashmir and access to the Mouth of the Indus. Although these are harsh terms, it might be wise to comply - lest our rivals on the continent act on our exposed situation."
-afg.3.a:0 "We yield because we have no other choice..."
-afg.3.b:0 "They must be joking, Hindustan Zindabad!"
+afg.3.t:0 "에미르의 요구"
+afg.3.d:0 "저주스러운! 아프간 개들은 우리를 완전히 압도하고 우리의 자만심을 굴욕에 빠뜨렸다. 이제 아프간 에미르는 카슈미르 왕국에 대한 우리의 항복과 인더스의 입구로의 접근을 요구합니다. 비록 이것들이 가혹한 조건이긴 하지만, 대륙에있는 라이벌들에게 노출된 상황에 따라서 행동하는 것이 현명 할 수 있습니다."
+afg.3.a:0 "우리는 다른 선택이 없기 때문에 항복한다..."
+afg.3.b:0 "그들은 분명 농담하고 있다, 힌두스탄 만세!"
 
-afg.4.t:0 "The Delhi Government Refuses!"
-afg.4.d:0 "Foolishly, the British lapdogs have refused our rightful claims."
-afg.4.a:0 "The war continues!"
+afg.4.t:0 "델리 정부가 거부했다!"
+afg.4.d:0 "어리석게도, 영국의 애완견들은 우리의 정당한 주장을 거부했다."
+afg.4.a:0 "전쟁은 계속된다!"
 
-afg.5.t:0 "Shia Muslims Flee The War"
-afg.5.d:0 "For decades the situation of the Shia minority in Afghanistan have been bad, the post-war situation wasn't gold, and another war could possibly only make it worse. Shia imams in the provinces of Herat and Farah have encouraged the shia minority to flee into their friendly neighbour Persia. Let's hope the Persians send them back, we need that manpower."
-afg.5.a:0 "Traitors!"
+afg.5.t:0 "시아파 무슬림이 전쟁을 피한다"
+afg.5.d:0 "수십 년 동안 아프가니스탄에서 시아파 소수 민족의 상황은 나빴으며 전후 상황은 금빛이 아니었고, 또 다른 전쟁은 상황이 더 악화될 수밖에 없었다. Herat와 Farah 지역의 시아파 이맘은 시아파 소수 민족이 시아파의 이웃인 페르시아로 피신할 수 있도록 시아파를 격려해 주었다. 페르시아인들이 그들을 돌려보내길 바란다. 우리는 그 인력이 필요하다."
+afg.5.a:0 "반역자들!"
 
-afg.6.t:0 "Refugees from Afghanistan"
-afg.6.d:0 "Yet another war has started between Afghanistan and Dehli. The Shia minority in Afghanistan fears this will only make their situation worse, therefor they have decided to start a new life here, however this situation might be more problematic then what we think. If we accept these people into our nation the government of Afghanistan will be deeply upset with us."
-afg.6.a:0 "They shall be more than welcome, settle them in Mashad!"
-afg.6.b:0 "This would be meddling in Afghan domestic politics, refuse them!"
+afg.6.t:0 "아프가니스탄 난민"
+afg.6.d:0 "그러나 또 다른 전쟁이 아프가니스탄과 델리 사이에 시작되었다. 아프가니스탄의 소수 민족인 시아파는 자신들의 상황이 더 악화될 것을 두려워하기 때문에 새로운 삶을 시작하기로 결정했다, 그러나 이 상황은 우리가 생각하는 것보다 더 문제가 될 수 있다. 우리가 이 사람들을 우리 나라로 받아들인다면 아프가니스탄 정부는 우리에게 깊은 분노를 느낄 것이다."
+afg.6.a:0 "그들에게 환영보다 더 많은 것을 해야 된다, Mashad에 그들을 정착시켜야 한다!"
+afg.6.b:0 "이것은 아프가니스탄 국내 정치에 간섭 할 것이다, 그들을 거부한다!"
 
-afg.7.t:0 "Persia Closes Its Borders"
-afg.7.d:0 "The Persians made the right choice and sent our people back home"
-afg.7.a:0 "Hurrah!"
+afg.7.t:0 "페르시아가 국경을 폐쇄하다"
+afg.7.d:0 "페르시아인들은 옳은 선택을 했고 우리 국민들을 고국으로 돌려보냈다."
+afg.7.a:0 "만세!"
 
 afg.8.t:0 "Domestic Reaction to Afghan Defeat"
 afg.8.d:0 "The defeat of our armies has sent shock waves through Afghanistan! Our secret service reports huge dissatisfaction with the royal government amongst both the peasants and the army! Even worse radical clerics are drumming up support for a general insurrection against the royal reform programme! These are truly dark times for our small kingdom."
@@ -122,5 +122,5 @@ AFG_national_populist_party:0 "급진 이슬람주의자"
 AFG_national_populist_party_long:0 "급진 이슬람주의자"
 
 ### Tooltips ###
-AFG_chaos_tooltip:0 "This choice will put Afghanistan into chaos of rebellion. In case of government falls either Radical Islamist or Nadir Shah will rule the country." #into chaos of rebellion? what?
+AFG_chaos_tooltip:0 "이 선택은 아프가니스탄을 반란의 혼란에 빠뜨릴 것이다. 정부가 무너지면 급진파 이슬람교도 Nadir Shah가 이 나라를 통치하게 된다." #into chaos of rebellion? what?
 
