--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -1007,113 +1007,113 @@ amcivwar.31600.d:0 "버밍햄 시에서 강력한 전투를 경험했지만, 우
 amcivwar.317.t:0 "멤피스 점령"
 amcivwar.317.d:0 "우리는 적들로부터 멤피스를 점령했으며 우리는 도시의 일부를 탈환할 수 있는 기회가 있습니다. 또한, 우리는 일부 공장들 중 일부를 탈환할 수 있습니다."
 amcivwar.317.a:0 "기회를 잡아라."
-amcivwar.317.b:0 "우리는 미국으로부터 훔치지 않는다."
+amcivwar.317.b:0 "우리는 미국으로부터 훔치지 않는다"
 amcivwar.318.t:0 "멤피스 수복"
 amcivwar.318.d:0 "우리는 적들로부터 멤피스을 탈환했습니다. 전투는 도시의 일부 산업을 손상시켰습니다."
 amcivwar.318.a:0 "도시는 다시 우리의 것이다."
 amcivwar.31800.t:0 "멤피스에서의 격렬한 전투"
-amcivwar.31800.d:0 "멤피스시에서 강력한 전투를 경험했지만, 우리는 다시 그것을 장악했습니다. 우리는 도시의 입지를 강화할 것입니다. 그리고 우리가 그것을 유지할 수 있을겁니다."
+amcivwar.31800.d:0 "멤피스 시에서 강력한 전투를 경험했지만, 우리는 다시 그것을 장악했습니다. 우리는 도시의 입지를 강화할 것입니다. 그리고 우리가 그것을 유지할 수 있을겁니다."
 amcivwar.319.t:0 "뉴올리언스 점령"
 amcivwar.319.d:0 "우리는 적들로부터 뉴올리언스를 점령했으며 우리는 도시의 일부를 탈환할 수 있는 기회가 있습니다. 또한, 우리는 일부 공장들 중 일부를 탈환할 수 있습니다."
 amcivwar.319.a:0 "기회를 잡아라."
-amcivwar.319.b:0 "우리는 미국으로부터 훔치지 않는다."
+amcivwar.319.b:0 "우리는 미국으로부터 훔치지 않는다"
 amcivwar.320.t:0 "뉴올리언스 수복"
 amcivwar.320.d:0 "우리는 적들로부터 뉴올리언스를 탈환했습니다. 전투는 도시의 일부 산업을 손상시켰습니다."
 amcivwar.320.a:0 "도시는 다시 우리의 것이다."
 amcivwar.32000.t:0 "뉴올리언스에서의 격렬한 전투"
-amcivwar.32000.d:0 "뉴올리언스시에서 강력한 전투를 경험했지만, 우리는 다시 그것을 장악했습니다. 우리는 도시의 입지를 강화할 것입니다. 그리고 우리가 그것을 유지할 수 있을겁니다."
+amcivwar.32000.d:0 "뉴올리언스 시에서 강력한 전투를 경험했지만, 우리는 다시 그것을 장악했습니다. 우리는 도시의 입지를 강화할 것입니다. 그리고 우리가 그것을 유지할 수 있을겁니다."
 amcivwar.321.t:0 "애틀랜타 점령"
 amcivwar.321.d:0 "우리가 미주연합의 수도 애틀랜타를 점령했습니다. 도시를 통제 함에따라,국내 여론은 내전에서 승기를 잡기위해 정부가 애틀랜타의 사람들을 처벌 할 것을 요구하고 있습니다."
 amcivwar.321.a:0 "파괴하고 태워라"
 amcivwar.321.b:0 "약간의 복수는 사기 진작을 보탤것이다."
 amcivwar.321.c:0 "우리는 모두 미국인이다."
 amcivwar.322.t:0 "애틀랜타 수복"
-amcivwar.322.d:0 "We have recaptured Atlanta from our enemies. They have caused significant damage to the city but the capital is back in our hands."
-amcivwar.322.a:0 "The city is ours again."
+amcivwar.322.d:0 "우리는 우리의 적들로부터 애틀랜타를 탈환했습니다. 그들은 도시에 상당한 피해를 입혔습니다. 그러나 수도는 우리의 손에 돌아갔습니다."
+amcivwar.322.a:0 "도시는 다시 우리의 것이다."
 amcivwar.323.t:0 "세인트루이스 점령"
-amcivwar.323.d:0 "We have captured the city of St. Louis from our enemies. There is an opportunity to recover some of the lost resources in the city. We can strip some of the factories and take some of the resources."
-amcivwar.323.a:0 "Grab what we can."
-amcivwar.323.b:0 "We don't steal from other Americans."
+amcivwar.323.d:0 "우리는 적들로부터 세인트루이스를 점령했으며 우리는 도시의 일부를 탈환할 수 있는 기회가 있습니다. 또한, 우리는 일부 공장들 중 일부를 탈환할 수 있습니다."
+amcivwar.323.a:0 "기회를 잡아라."
+amcivwar.323.b:0 "우리는 미국으로부터 훔치지 않는다"
 amcivwar.324.t:0 "세인트루이스 수복"
-amcivwar.324.d:0 "We have recaptured St. Louis from our enemies. The battle has damaged some of the industry in the city."
-amcivwar.324.a:0 "The city is ours again."
-amcivwar.32400.t:0 "Heavy Fighting in St. Louis"
-amcivwar.32400.d:0 "The city of St. Louis has experienced heavy fighting but we have taken it again. We will fortify our position in the city and hopefully we can hold it."
+amcivwar.324.d:0 "우리는 적들로부터 세인트루이스를 탈환했습니다. 전투는 도시의 일부 산업을 손상시켰습니다."
+amcivwar.324.a:0 "도시는 다시 우리의 것이다."
+amcivwar.32400.t:0 "세인트루이스에서의 격렬한 전투"
+amcivwar.32400.d:0 "세인트루이스 시에서 강력한 전투를 경험했지만, 우리는 다시 그것을 장악했습니다. 우리는 도시의 입지를 강화할 것입니다. 그리고 우리가 그것을 유지할 수 있을겁니다.""
 amcivwar.325.t:0 "볼티모어 점령"
-amcivwar.325.d:0 "We have captured the city of Baltimore from our enemies. There is an opportunity to recover some of the lost resources in the city. We can strip some of the factories and take some of the resources."
-amcivwar.325.a:0 "Grab what we can."
-amcivwar.325.b:0 "We don't steal from other Americans."
+amcivwar.325.d:0 "우리는 적들로부터 볼티모어를 점령했으며 우리는 도시의 일부를 탈환할 수 있는 기회가 있습니다. 또한, 우리는 일부 공장들 중 일부를 탈환할 수 있습니다."
+amcivwar.325.a:0 "기회를 잡아라."
+amcivwar.325.b:0 "우리는 미국으로부터 훔치지 않는다"
 amcivwar.326.t:0 "볼티모어 수복"
-amcivwar.326.d:0 "We have recaptured Baltimore from our enemies. The battle has damaged some of the industry in the city."
-amcivwar.326.a:0 "The city is ours again."
-amcivwar.32600.t:0 "Heavy Fighting in Baltimore"
-amcivwar.32600.d:0 "The city of Baltimore has experienced heavy fighting but we have taken it again. We will fortify our position in the city and hopefully we can hold it."
+amcivwar.326.d:0 "우리는 적들로부터 볼티모어를 탈환했습니다. 전투는 도시의 일부 산업을 손상시켰습니다."
+amcivwar.326.a:0 "도시는 다시 우리의 것이다."
+amcivwar.32600.t:0 "볼티모어에서의 격렬한 전투"
+amcivwar.32600.d:0 "볼티모어 시에서 강력한 전투를 경험했지만, 우리는 다시 그것을 장악했습니다. 우리는 도시의 입지를 강화할 것입니다. 그리고 우리가 그것을 유지할 수 있을겁니다."
 amcivwar.327.t:0 "루이빌 점령"
-amcivwar.327.d:0 "We have captured the city of Louisville from our enemies. There is an opportunity to recover some of the lost resources in the city. We can strip some of the factories and take some of the resources."
-amcivwar.327.a:0 "Grab what we can."
-amcivwar.327.b:0 "We don't steal from other Americans."
+amcivwar.327.d:0 "우리는 적들로부터 루이빌을 점령했으며 우리는 도시의 일부를 탈환할 수 있는 기회가 있습니다. 또한, 우리는 일부 공장들 중 일부를 탈환할 수 있습니다."
+amcivwar.327.a:0 "기회를 잡아라."
+amcivwar.327.b:0 "우리는 미국으로부터 훔치지 않는다"
 amcivwar.328.t:0 "루이빌 수복"
-amcivwar.328.d:0 "We have recaptured Louisville from our enemies. The battle has damaged some of the industry in the city."
-amcivwar.328.a:0 "The city is ours again."
-amcivwar.32800.t:0 "Heavy Fighting in Louisville"
-amcivwar.32800.d:0 "The city of Louisville has experienced heavy fighting but we have taken it again. We will fortify our position in the city and hopefully we can hold it."
+amcivwar.328.d:0 "우리는 적들로부터 루이빌을 탈환했습니다. 전투는 도시의 일부 산업을 손상시켰습니다."
+amcivwar.328.a:0 "도시는 다시 우리의 것이다."
+amcivwar.32800.t:0 "루이빌에서의 격렬한 전투"
+amcivwar.32800.d:0 "루이빌 시에서 강력한 전투를 경험했지만, 우리는 다시 그것을 장악했습니다. 우리는 도시의 입지를 강화할 것입니다. 그리고 우리가 그것을 유지할 수 있을겁니다."
 amcivwar.329.t:0 "댈러스 점령"
-amcivwar.329.d:0 "We have captured the city of Dallas from our enemies. There is an opportunity to recover some of the lost resources in the city. We can strip some of the factories and take some of the resources."
-amcivwar.329.a:0 "Grab what we can."
-amcivwar.329.b:0 "We don't steal from other Americans."
+amcivwar.329.d:0 "우리는 적들로부터 댈러스를 점령했으며 우리는 도시의 일부를 탈환할 수 있는 기회가 있습니다. 또한, 우리는 일부 공장들 중 일부를 탈환할 수 있습니다."
+amcivwar.329.a:0 "기회를 잡아라."
+amcivwar.329.b:0 "우리는 미국으로부터 훔치지 않는다"
 amcivwar.330.t:0 "댈러스 수복"
-amcivwar.330.d:0 "We have recaptured Dallas from our enemies. The battle has damaged some of the industry in the city."
-amcivwar.330.a:0 "The city is ours again."
-amcivwar.33000.t:0 "Heavy Fighting in Dallas"
-amcivwar.33000.d:0 "The city of Dallas has experienced heavy fighting but we have taken it again. We will fortify our position in the city and hopefully we can hold it."
+amcivwar.330.d:0 "우리는 적들로부터 댈러스를 탈환했습니다. 전투는 도시의 일부 산업을 손상시켰습니다."
+amcivwar.330.a:0 "도시는 다시 우리의 것이다."
+amcivwar.33000.t:0 "댈러스에서의 격렬한 전투"
+amcivwar.33000.d:0 "댈러스 시에서 강력한 전투를 경험했지만, 우리는 다시 그것을 장악했습니다. 우리는 도시의 입지를 강화할 것입니다. 그리고 우리가 그것을 유지할 수 있을겁니다."
 amcivwar.331.t:0 "포틀랜드 점령"
-amcivwar.331.d:0 "We have captured the city of Portland from our enemies. There is an opportunity to recover some of the lost resources in the city. We can strip some of the factories and take some of the resources."
-amcivwar.331.a:0 "Grab what we can."
-amcivwar.331.b:0 "We don't steal from other Americans."
+amcivwar.331.d:0 "우리는 적들로부터 포틀랜드를 점령했으며 우리는 도시의 일부를 탈환할 수 있는 기회가 있습니다. 또한, 우리는 일부 공장들 중 일부를 탈환할 수 있습니다."
+amcivwar.331.a:0 "기회를 잡아라."
+amcivwar.331.b:0 "우리는 미국으로부터 훔치지 않는다"
 amcivwar.332.t:0 "포틀랜드 수복"
-amcivwar.332.d:0 "We have recaptured Portland from our enemies. The battle has damaged some of the industry in the city."
-amcivwar.332.a:0 "The city is ours again."
-amcivwar.33200.t:0 "Heavy Fighting in Portland"
-amcivwar.33200.d:0 "The city of Portland has experienced heavy fighting but we have taken it again. We will fortify our position in the city and hopefully we can hold it."
+amcivwar.332.d:0 "우리는 적들로부터 포틀랜드를 탈환했습니다. 전투는 도시의 일부 산업을 손상시켰습니다."
+amcivwar.332.a:0 "도시는 다시 우리의 것이다."
+amcivwar.33200.t:0 "포틀랜드에서의 격렬한 전투"
+amcivwar.33200.d:0 "포틀랜드 시에서 강력한 전투를 경험했지만, 우리는 다시 그것을 장악했습니다. 우리는 도시의 입지를 강화할 것입니다. 그리고 우리가 그것을 유지할 수 있을겁니다."
 amcivwar.333.t:0 "시애틀 점령"
-amcivwar.333.d:0 "We have captured the city of Seattle from our enemies. There is an opportunity to recover some of the lost resources in the city. We can strip some of the factories and take some of the resources."
-amcivwar.333.a:0 "Grab what we can."
-amcivwar.333.b:0 "We don't steal from other Americans."
+amcivwar.333.d:0 "우리는 적들로부터 시애틀을 점령했으며 우리는 도시의 일부를 탈환할 수 있는 기회가 있습니다. 또한, 우리는 일부 공장들 중 일부를 탈환할 수 있습니다.
+amcivwar.333.a:0 "기회를 잡아라."
+amcivwar.333.b:0 "우리는 미국으로부터 훔치지 않는다"
 amcivwar.334.t:0 "시애틀 수복"
-amcivwar.334.d:0 "We have recaptured Seattle from our enemies. The battle has damaged some of the industry in the city."
-amcivwar.334.a:0 "The city is ours again."
-amcivwar.33400.t:0 "Heavy Fighting in Seattle"
-amcivwar.33400.d:0 "The city of Seattle has experienced heavy fighting but we have taken it again. We will fortify our position in the city and hopefully we can hold it."
+amcivwar.334.d:0 "우리는 적들로부터 시애틀을 탈환했습니다. 전투는 도시의 일부 산업을 손상시켰습니다."
+amcivwar.334.a:0 "도시는 다시 우리의 것이다."
+amcivwar.33400.t:0 "시애틀에서의 격렬한 전투"
+amcivwar.33400.d:0 "시애틀 시에서 강력한 전투를 경험했지만, 우리는 다시 그것을 장악했습니다. 우리는 도시의 입지를 강화할 것입니다. 그리고 우리가 그것을 유지할 수 있을겁니다."
 amcivwar.335.t:0 "로스엔젤레스 점령"
-amcivwar.335.d:0 "We have captured the city of Los Angeles from our enemies. There is an opportunity to recover some of the lost resources in the city. We can strip some of the factories and take some of the resources."
-amcivwar.335.a:0 "Grab what we can."
-amcivwar.335.b:0 "We don't steal from other Americans."
+amcivwar.335.d:0 "우리는 적들로부터 로스엔젤레스를 점령했으며 우리는 도시의 일부를 탈환할 수 있는 기회가 있습니다. 또한, 우리는 일부 공장들 중 일부를 탈환할 수 있습니다."
+amcivwar.335.a:0 "기회를 잡아라."
+amcivwar.335.b:0 "우리는 미국으로부터 훔치지 않는다"
 amcivwar.336.t:0 "로스엔젤레스 수복"
-amcivwar.336.d:0 "We have recaptured Los Angeles from our enemies. The battle has damaged some of the industry in the city."
-amcivwar.336.a:0 "The city is ours again."
-amcivwar.33600.t:0 "Heavy Fighting in Los Angeles"
-amcivwar.33600.d:0 "The city of Los Angeles has experienced heavy fighting but we have taken it again. We will fortify our position in the city and hopefully we can hold it."
+amcivwar.336.d:0 "우리는 적들로부터 로스엔젤레스를 탈환했습니다. 전투는 도시의 일부 산업을 손상시켰습니다."
+amcivwar.336.a:0 "도시는 다시 우리의 것이다."
+amcivwar.33600.t:0 "로스엔젤레스에서의 격렬한 전투"
+amcivwar.33600.d:0 "로스엔젤레스 시에서 강력한 전투를 경험했지만, 우리는 다시 그것을 장악했습니다. 우리는 도시의 입지를 강화할 것입니다. 그리고 우리가 그것을 유지할 수 있을겁니다."
 amcivwar.337.t:0 "샌 프란시스코 점령"
-amcivwar.337.d:0 "We have captured the city of San Francisco from our enemies. There is an opportunity to recover some of the lost resources in the city. We can strip some of the factories and take some of the resources."
-amcivwar.337.a:0 "Grab what we can."
-amcivwar.337.b:0 "We don't steal from other Americans."
-amcivwar.338.t:0 " 프란시스코 수복"
-amcivwar.338.d:0 "We have recaptured San Francisco from our enemies. The battle has damaged some of the industry in the city."
-amcivwar.338.a:0 "The city is ours again."
-amcivwar.33800.t:0 "Heavy Fighting in San Francisco"
-amcivwar.33800.d:0 "The city of San Francisco has experienced heavy fighting but we have taken it again. We will fortify our position in the city and hopefully we can hold it."
+amcivwar.337.d:0 "우리는 적들로부터 샌 프란시스코를 점령했으며 우리는 도시의 일부를 탈환할 수 있는 기회가 있습니다. 또한, 우리는 일부 공장들 중 일부를 탈환할 수 있습니다."
+amcivwar.337.a:0 "기회를 잡아라."
+amcivwar.337.b:0 "우리는 미국으로부터 훔치지 않는다"
+amcivwar.338.t:0 "샌 프란시스코 수복"
+amcivwar.338.d:0 "우리는 적들로부터 샌 프란시스코를 탈환했습니다. 전투는 도시의 일부 산업을 손상시켰습니다."
+amcivwar.338.a:0 "도시는 다시 우리의 것이다."
+amcivwar.33800.t:0 "샌 프란시스코에서의 격렬한 전투"
+amcivwar.33800.d:0 "샌 프란시스코 시에서 강력한 전투를 경험했지만, 우리는 다시 그것을 장악했습니다. 우리는 도시의 입지를 강화할 것입니다. 그리고 우리가 그것을 유지할 수 있을겁니다."
 amcivwar.339.t:0 "새크라멘토 점령"
 amcivwar.339.d:0 "We have captured the capital of the PSA. With control of the city, the people of the country are demanding that we take advantage of the situation and punish the people of Sacramento."
-amcivwar.339.a:0 "Slash and burn"
+amcivwar.339.a:0 "파괴하고 태워라"
 amcivwar.339.b:0 "A little vengeance will help morale."
-amcivwar.339.c:0 "We are all Americans."
+amcivwar.339.c:0 "우리는 모두 미국인이다."
 amcivwar.340.t:0 "새크라멘토 수복"
 amcivwar.340.d:0 "We have recaptured Sacramento from our enemies. They have caused significant damage to the city but the capital is back in our hands."
-amcivwar.340.a:0 "The city is ours again."
+amcivwar.340.a:0 "도시는 다시 우리의 것이다."
 amcivwar.342.t:0 "United states in disarray"
 amcivwar.342.d:0 "The civil war has erupted in the United states, tearing apart the last shreds of unity in the Union. This presents us with chance to remove the American presence from Cuba by occupying Guantanamo bay naval base. There is very little that the US government can do to stop us at this point."
-amcivwar.342.a:0 "Seize the naval base!"
-amcivwar.342.b:0 "Rather not"
+amcivwar.342.a:0 "해군기지를 붙잡아라"
+amcivwar.342.b:0 "하지 않는게 좋겠군"
 amcivwar.343.t:0 "Cuba Seizes Guantanamo naval base"
 amcivwar.343.d:0 "With America in turmoil, Cuba has moved its troops onto the USA-leased Guantanamo bay naval base. There is very little that the US government can do to stop Cuba at this point."
 amcivwar.343.a:0 "안타깝군"
