12월 업데이트 반영

--- a/Kaiserreich Korean Translation/localisation/KR_Alash_Autonomy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Alash_Autonomy_l_english.yml
@@ -1,9 +1,9 @@
-﻿l_english:
+l_english:
 
 ### Opinion Modifiers ###
 ALO_loyal_RUS:0 "Alash Autonomy Loyalty"
-ALO_independent_RUS:0 "Alash Autonomy declare Independence"
-ALO_indepence_RUS:0 "Alash Autonomy declare Independence"
+ALO_independent_RUS:0 "Alash Autonomy declared Independence"
+ALO_indepence_RUS:0 "Alash Autonomy declared Independence"
 KAZ_TUR_DKB:0 "Elected Turkmen Head of Government"
 KAZ_TUR_RUS:0 "Elected Turkmen Head of Government"
 KAZ_TUR_TRK:0 "Elected Turkmen Head of Government"
@@ -14,58 +14,58 @@ KAZ_COS_DKB:0 "Elected Cossack Head of Government"
 KAZ_COS_RUS:0 "Elected Cossack Head of Government"
 KAZ_COS_TRK:0 "Elected Cossack Head of Government"
 ALO_DKB_secede:0 "Encouraged Seceding"
-ALO_DKB_pledge:0 "The Cossacks Pledge to Defend the Cossack Communities"
-ALO_DKB_no_concern:0 "The Cossacks are not concerned"
+ALO_DKB_pledge:0 "The Cossacks Pledged to Defend the Cossack Communities"
+ALO_DKB_no_concern:0 "The Cossacks were not concerned"
 ALO_let_cossaks:0 "Let the Cossacks secede"
-ALO_TRK_liberate:0 "Liberate Islamic Brothers"
-ALO_TRK_defend:0 "Pledge to Defend Orda's Muslims"
-ALO_TRK_do_nothing:0 "Turkestan Maintain the Status Quo"
+ALO_TRK_liberate:0 "Liberated Islamic Brothers"
+ALO_TRK_defend:0 "Pledged to Defend Orda's Muslims"
+ALO_TRK_do_nothing:0 "Turkestan Maintained the Status Quo"
 ALO_RUS_encourage:0 "Encouraged Seceding"
-ALO_RUS_pledge:0 "Russia Pledge to defend the Russian Communities"
-ALO_RUS_war:0 "러시아가 우리에게 전쟁을 선포했습니다"
-ALO_RUS_nothing:0 "Russia Maintain the Status Quo"
+ALO_RUS_pledge:0 "Russia Pledged to defend the Russian Communities"
+ALO_RUS_war:0 "Russia Declared War on Us"
+ALO_RUS_nothing:0 "Russia Maintained the Status Quo"
 ALO_do_nothing_RUS:0 "Alash Cedes"
 ALO_RUS_alliance:0 "Alliance with Russia"
-ALO_RUS_decline_all:0 "Russia Refuses our Alliance Offer"
+ALO_RUS_decline_all:0 "Russia Refused our Alliance Offer"
 ALO_RUS_claim:0 "Russia Claimed our Territories"
 ALO_RUS_puppet:0 "They are our Masters"
 ALO_RUS_decline_ann:0 "No Interest in Us"
 ALO_RUS_tsar_russ:0 "It's Only the Tsar of Russia"
-ALO_RUS_tsar_gifts:0 "Russia Send Gifts"
+ALO_RUS_tsar_gifts:0 "Russia Sent Gifts"
 ALO_RUS_colony:0 "We're converted in a Russian Colony"
 ALO_RUS_no_interest:0 "No Interest in Us"
 ALO_RUS_rule_directly:0 "They Want to Annex Us"
-ALO_RUS_material:0 "Russia Send Material"
+ALO_RUS_material:0 "Russia Sent Material"
 ALO_RUS_war_TRK:0 "Russia Declared War on Alash Orda"
-ALO_RUS_no_risk:0 "They Remain Neutral"
+ALO_RUS_no_risk:0 "They Remained Neutral"
 ALO_rel_TRK_RUS:0 "Alash Orda Liberated Turkestan"
 ALO_rel_TRK_DKB:0 "Alash Orda Liberated Turkestan"
-ALO_rel_pup_TRK:0 "Alash Orda Puppet Turkestan"
+ALO_rel_pup_TRK:0 "Alash Orda Puppeted Turkestan"
 ALO_TRK_free:0 "Alash Orda Liberated Turkestan"
 ALO_TRK_free_others:0 "Alash Orda Liberated Turkestan"
-ALO_TRK_pupp:0 "Alash Orda Puppet Turkestan"
-ALO_TRK_pupp_others:0 "Alash Orda Puppet Turkestan"
+ALO_TRK_pupp:0 "Alash Orda Puppeted Turkestan"
+ALO_TRK_pupp_others:0 "Alash Orda Puppeted Turkestan"
 ALO_RUS_no_int:0 "No Interest in Us"
-ALO_ann_TRK:0 "Alash Annex Turkestan"
+ALO_ann_TRK:0 "Alash Annexed Turkestan"
 
 ### Events ###
 alash.1.t:0 "Independence for Alash autonomy?"
-alash.1.d:0 "Our country, despite nominally part of Russia with autonomous status has been de facto independent from the singing of the Minsk treaty in 1920. Despite Russian attempt in 1925 to fully integrate us into Russia during repelling invasion from Turkestan, our status remained unchanged thanks to the attempt of admiral Koltschak to seize power in Russia. Now with Russia engulfed in chaos, the time has come to throw off chains of Russian oppression and end farce of Alash-Orda being part of Russia !"
+alash.1.d:0 "Our country, despite nominally being part of Russia with autonomous status has been de facto independent from the signing of the Minsk treaty in 1920. Despite a Russian attempt in 1925 to fully integrate us into Russia while repelling an invasion from Turkestan, our status remained unchanged thanks to Admiral Kolchak's coup d'etat attempt. Now with Russia engulfed in chaos, the time has come to throw off the chains of Russian oppression and end the farce of Alash-Orda being part of Russia !"
 alash.1.a:0 "No, we must remain loyal to Russia"
 alash.1.b:0 "Declare full independence from Russia"
 
 alash.2.t:0 "Alash autonomous region declares independence!"
-alash.2.d:0 "Terrible news ! Our autonomous region of Alash-Orda has decided to use political chaos in Russia following assassination of Kerensky to sever almost all ties with Russia and declare independence. While many hotheads in general staff are demanding immediate action, ongoing chaos prevents us from responding to this treachery. It seems that we must let Alash-Orda be. For now..."
+alash.2.d:0 "Terrible news ! Our autonomous region of Alash-Orda has decided to use the political chaos in Russia following the assassination of Kerensky to sever almost all ties with Russia and declare independence. While many hotheads in the General Staff are demanding immediate action, ongoing chaos prevents us from responding to this treachery. It seems that we must let Alash-Orda be. For now..."
 alash.2.a:0 "There is nothing we can do..."
 
 alash.3.t:0 "The Peoples of Alash Orda"
 alash.3.d:0 "Our population is divided into three separate communities, and if it is to remain stable, it is necessary for our government to favour one of these groups above the others. Make this decision carefully, as it may lead to international complications."
-alash.3.a:0 "The Kazakhs and Turkmen: they make up the majority of our population"
+alash.3.a:0 "The Kazakhs and Kyrgyz people: they make up the majority of our population"
 alash.3.b:0 "The ethnic Russians: they control the economy"
 alash.3.c:0 "Our security depends upon the Cossacks"
 
 alash.4.t:0 "The Alash Orda's Cossacks are oppressed!"
-alash.4.d:0 "The leaders of the Kazakh Republic's Cossack communities have complained to us that they are oppressed under the government's ethnicities policy."
+alash.4.d:0 "The leaders of the Kazakh Republic's Cossack communities have complained to us that they are oppressed under the government's ethnical policy."
 alash.4.a:0 "Encourage them to secede and join our Union"
 alash.4.b:0 "Pledge to defend the security of the Cossacks"
 alash.4.c:0 "Send them away: this is no concern of ours"
@@ -76,14 +76,14 @@ alash.5.a:0 "We shall fight all who threaten the unity of our state!"
 alash.5.b:0 "Let them go, but maintain links with the Cossack leaders"
 alash.5.c:0 "Let the Cossacks leave"
 
-alash.6.t:0 "The Alash Orda's Turkmen are oppressed!"
-alash.6.d:0 "The leaders of Alash Orda's Turkmen communities have complained to us that they are oppressed under the government's ethnicities policy."
+alash.6.t:0 "The Alash Orda's Kyrgyz people are oppressed!"
+alash.6.d:0 "The leaders of Alash Orda's Kyrgyz communities have complained to us that they are oppressed under the government's ethnical policy."
 alash.6.a:0 "We shall fight to liberate our Islamic brothers!"
 alash.6.b:0 "We pledge to defend the interests of Orda's Muslims"
 alash.6.c:0 "Do nothing"
 
 alash.7.t:0 "The Alash Orda's Russians are oppressed!"
-alash.7.d:0 "The leaders of Alash Orda's Russian community have complained to us that they are oppressed under the government's ethnicities policy."
+alash.7.d:0 "The leaders of Alash Orda's Russian community have complained to us that they are oppressed under the government's ethnical policy."
 alash.7.a:0 "Encourage them to secede and rejoin Russia"
 alash.7.b:0 "Pledge to defend the Russian community"
 alash.7.c:0 "The Kazakhs have overstepped the mark: this means war!"
@@ -145,11 +145,11 @@ alash.16.c:0 "The Kazakhs are wrong: they occupy Russian lands!"
 alash.16.e:0 "Russia shall prove where its interests lie: we shall march to Alma-ata!"
 
 alash.17.t:0 "The Tsar Comes to the Alma-Ata!"
-alash.17.d:0 "The Tsar has come to Alma-ata to be formally recognised as the Overlord of the Kazakh and Turkmen Steppes. A grand parade of our nation's Kazakhs, Turkmen, Cossacks, and Russians has been organised, highlighting the diversity of the Tsar's new subjects! All rejoice!"
+alash.17.d:0 "The Tsar has come to Alma-ata to be formally recognised as the Overlord of the Kazakh and Kyrgyz Steppes. A grand parade of our nation's Kazakhs, Kyrgyz, Cossacks, and Russians has been organised, highlighting the diversity of the Tsar's new subjects! All rejoice!"
 alash.17.a:0 "God Save The Tsar!"
 
 alash.18.t:0 "The Tsar Comes to Alma-Ata"
-alash.18.d:0 "To fulfil the agreement with Alash Orda, the Tsar has come to Alma-ata to be formally recognised as the Overlord of the Kazakh and Turkmen Steppes. A grand parade of Kazakhs, Turkmen, Cossacks, and Russians has been organised, highlighting the diversity of the Tsar's new subjects! The whole ceremony has been relayed across the Empire by radio broadcast, and our subjects flock to watch the newsreels in the cinema!"
+alash.18.d:0 "To fulfil the agreement with Alash Orda, the Tsar has come to Alma-ata to be formally recognised as the Overlord of the Kazakh and Kyrgyz Steppes. A grand parade of Kazakhs, Kyrgyz, Cossacks, and Russians has been organised, highlighting the diversity of the Tsar's new subjects! The whole ceremony has been relayed across the Empire by radio broadcast, and our subjects flock to watch the newsreels in the cinema!"
 alash.18.a:0 "God Save The Tsar! A Triumph of Propaganda!"
 
 alash.19.t:0 "Help from Russia ?"
