--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -26,6 +26,7 @@ annex.9.t:0 "세르비아 통합"
 annex.9.d:0 "세르비아를 일정 기간 지배하였고, 지역 주민들이 드디어 우리의 통치를 받아들이기 시작한 것 같습니다."
 annex.10.t:0 "그리스 합병"
 annex.10.d:0 "그리스 반도를 확보했으며 그리스를 합병했습니다. 그리스 국가 전체의 운명이 우리 손아귀에 있습니다..."
+annex.10.a:0 "Keep the island of Crete to control the Mediterranean and liberate a loyal Greece"
 annex.11.t:0 "그리스 통합"
 annex.11.d:0 "그리스를 일정 기간 지배하였고, 지역 주민들이 드디어 우리의 통치를 받아들이기 시작한 것 같습니다."
 annex.12.t:0 "헝가리 합병"
@@ -444,6 +445,9 @@ annex.118.t:0 "The Annexation of Siam"
 annex.118.d:0 "We have taken control over the Thai state and secured our dominance on the upper part of the Malay Peninsular. Now the pressing issue for our government is figuring out what we should do with the newly 'liberated' Thai provinces."
 annex.118.a:0 "Liberate a friendly Siam!"
 annex.118.b:0 "Maintain military occupation."
+annex.118.c:0 "Install an Chakrabongse Siamese puppet!"
+annex.118.e:0 "Install an Paribatra Siamese puppet!"
+annex.118.f:0 "Make them a republic!"
 annex.119.t:0 "The Fate of Ceylon"
 annex.119.d:0 "We have managed to drive the Germans from the island of Ceylon and secured the capital of Colombo thoroughly. Now, however, we need to figure out what to do with the damned rock."
 annex.119.a:0 "Liberate a friendly Sri Lanka!"
@@ -579,7 +583,8 @@ annex.147.t:0 "The Fate of White Ruthenia"
 annex.147.d:0 "After a short campaign across Belarus, we have managed to shatter the defences of Minsk. White Ruthenia is now in our hands! We must now decide on the future of it."
 annex.147.a:0 "Liberate White Ruthenia under a friendly government!"
 annex.147.b:0 "Give it to our Russian friend"
-annex.147.c:0 "Continue with military occupation!"
+annex.147.c:0 "Bring them back into our sphere!"
+annex.147.e:0 "Continue with military occupation!"
 annex.148.t:0 "The Fate of Slovakia"
 annex.148.d:0 "After a short campaign across the mountains of Slovakia, we have managed to shatter the defences of the country. Slovakia is now in our hands! We must now decide on the future of it."
 annex.148.a:0 "Liberate Slovakia under a friendly government!"
@@ -597,7 +602,7 @@ annex.151.t:0 "The Fate of Montenegro"
 annex.151.d:0 "Montenegro is now firmly held in our hands after our occupation of the area, yet we can't stay in the inhospitable Montenegro forever. We must decide what to do with it."
 annex.152.t:0 "The Fate of Albania"
 annex.152.d:0 "After a short campaign across the Albanian countryside, Tirana finally capitulated, leaving us with the control of their country. We must now decide what to do with it."
-annex.152.a:0 "Give Kosovo to Serbia and liberate the rest"
+annex.152.b:0 "Take southern Epirus and liberate the rest!"
 annex.153.t:0 "The destiny of Italy"
 annex.153.d:0 "We now have to decide what to do with Italy. We can't control those territories forever and we might have to think about creating a puppet Italian state."
 annex.153.a:0 "Liberate the Italian Federation"
@@ -640,7 +645,7 @@ annex.161.d:0 "After a short campaign across the fields of Belgium we now contro
 annex.161.a:0 "Liberate a loyal united Flanders-Wallonia"
 annex.161.b:0 "Liberate Flanders and Wallonia"
 annex.161.c:0 "Liberate Flanders"
-annex.161.e:0 "Secede Flanders to Netherlands and liberate Wallonia"
+annex.161.e:0 "Flanders is Dutch, but Liberate Wallonia!"
 annex.162.t:0 "Southern Wallonia"
 annex.162.d:0 "We now control the southern half of Wallonia that was once occupied by the German army following the Weltkrieg, we must choose what to do with our new piece of Belgium."
 annex.162.a:0 "Liberate Wallonia"
@@ -872,6 +877,32 @@ annex.222.a:0 "Form the state of Cape Verde-Guinea"
 annex.223.t:0 "Fate of Madagascar"
 annex.223.d:0 "Our powerful armies have taken control of the former German colony of Madagascar. The huge island is currently under military administration but we may want to install a real administration there, should it be local or should we annex the island directly to our empire?"
 annex.223.a:0 "Form the state of Madagascar"
+annex.224.t:0 "Fate of Cyprus"
+annex.224.d:0 "Our armies have managed to take control of Cyprus, and the island itself is now occupied by us. We have a few options in front of us, now. We can either puppet the island or take it for ourselves, seeing as it possesses a key position in the Mediterranean and is crucial to retaining control of that area. What shall we do?"
+annex.224.a:0 "Liberate Cyprus"
+annex.224.b:0 "Give it to the Turks"
+annex.224.b:0 "Give it to Greece"
+annex.224.e:0 "Occupy them!"
+annex.225.t:0 "Fate of Indonesia"
+annex.225.d:0 "Our armies have managed to take control of Indonesia, and the islands themselves are now occupied by us. We have a few options now. We can either puppet the island or take it for ourselves, seeing as it possesses a key position in South East Asia and has many strategically valuable resources. What shall we do?"
+annex.225.a:0 "Liberate Indonesia"
+annex.225.b:0 "Give it to our Dutch Friends"
+annex.225.e:0 "Occupy them!"
+annex.226.t:0 "Fate of Transamur"
+annex.226.d:0 "Our armies have managed to take control of Transamur, and it is now occupied by us. We have a few options now. We can either puppet the land or take it for ourselves, seeing as it possesses a key strategic position in East Asia. What shall we do?"
+annex.226.a:0 "Liberate Transamur"
+annex.226.b:0 "Give it to our Russian Friends"
+annex.226.c:0 "Occupy them!"
+annex.227.t:0 "Fate of Malaysia"
+annex.227.d:0 "Our armies have managed to take control of Malaysia, and it is now occupied by us. We have a few options at this juncture. What shall we do?"
+annex.227.a:0 "Liberate Malaysia"
+annex.227.b:0 "Liberate Malaysia and Sarawak"
+annex.227.c:0 "Give it to our German Friends"
+annex.227.e:0 "Give it to our German Friends"
+annex.227.f:0 "Give it to our Indonesian Friends"
+annex.227.g:0 "Give part of it to our Siamese Friends and liberate Sarawak"
+annex.227.h:0 "Split it between our Indonesian and Siamese Friends"
+annex.227.i:0 "Occupy them!"
 
 ### Opinion Modifiers ###
 refused_prince:0 "Refused prince"
