--- a/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
@@ -1080,39 +1080,73 @@ ausgleich.new.701.a:0 "멋지군."
 #########################################################################################################################
 
 aus.tree.4010.t:0 "The German War Effort"
+aus.tree.4010.d:0 "Our neighbours and old allies are at war with France, a fact that one can hardly miss. What German military minds had expected to be over in a few weeks, has turned into a repeat of the Weltkrieg. Should the Communards be the victors of this war, not only will our interests in Italy be compromised, but the integrity of our Empire may be at stake. It might be best to put our differences aside and to fight side-by-side with the Germans once more."
+aus.tree.4010.a:0 "Send a facsimile to Berlin."
+
 aus.tree.4011.t:0 "Austria wishes to join the War"
-aus.tree.4011.a:0 "Let them."
-aus.tree.4011.b:0 "We're doing good on our own."
+aus.tree.4011.d:0 "Today, a facsimile arrived from Vienna stating that our neighbours are keen on 'helping out' with the ongoing war against the Commune. While the Austrian army is no more the trainwreck it was during the Weltkrieg and thus it would be of help, this would open a second front against Italy, and the Habsburgs certainly have a stake in the Italian peninsula."
+aus.tree.4011.a:0 "Brothers in Arms once more."
+aus.tree.4011.b:0 "We are doing good on our own."
 
 aus.tree.4012.t:0 "Germany declines our Offer"
-aus.tree.4012.a:0 "What a pity."
+aus.tree.4012.d:0 "Berlin has responded to our facsimile stating that our help was neither needed, nor wanted, and that we should stay out of the ongoing conflict."
+aus.tree.4012.a:0 "How rude."
 aus.tree.4012.b:0 "Does [From.GetLeader] think he can decide this on his own?"
 
 aus.tree.4013.t:0 "Germany allows us to join their War"
+aus.tree.4013.d:0 "Berlin has responded favourly to our facsimile, welcoming the help we have offered in combatting the Syndicalist Menace. As of today, we are in a state of war with the SyndIntern."
+aus.tree.4013.a:0 "Brothers in Arms once more."
 
 
-aus.tree.4020.t:0 "The Albanian Question"
-aus.tree.4021.t:0 "Austria invites us to their Faction"
+aus.tree.4020.t:0 "Our Interests in Albania"
+aus.tree.4020.d:0 "The Principality of Albania - left under Austrian influence after the Weltkrieg, our delegation was forced to abscond due to internal problems. Now, however, we are ready to "
+aus.tree.4020.a:0 "Let us rekindle the flame."
+
+aus.tree.4021.t:0 "A Facsimile from Vienna"
+aus.tree.4021.d:0 "Austria has rekindled her policy of acting as a "Protector of the Balkans", formally invites us to their faction. As such, we would be under their protection."
 aus.tree.4021.a:0 "It's good to have protection."
 aus.tree.4021.b:0 "We're doing well on our own."
 
 aus.tree.4022.t:0 "[From.GetNameDef] declines."
+aus.tree.4022.d:0 "[From.GetLeader] has let us know that his country has no interest in our offer of protection. [From.GetNameDef] will not be part of our sphere."
+aus.tree.4022.a:0 "Well then."
+
 aus.tree.4023.t:0 "[From.GetNameDef] agrees to join our Sphere."
+aus.tree.4023.d:0 "[From.GetLeader] has let us know that his country is looking forward to closer coopertaion. [Root.GetAdjective]-[From.GetAdjective] Relationships are off to a good start."
+aus.tree.4023.a:0 "Splendid."
 
 
-aus.tree.4030.t:0 "The Greek Question"
-aus.tree.4031.t:0 "Austria invites us to their Faction"
+aus.tree.4030.t:0 "Our Interests in Greece"
+aus.tree.4030.d:0 "The Kingdom of Greece - in antiquity, the pyre of civilisation. Today, a humiliated country, with most of her territory occupied by our old allies. Greece has been romancing with Serbia, who shares a similar fate - an alliance that might become dangerous to us. It is argued that us backing their interests might put us into conflict with Bulgaria, but that it would be favourable over them throwing their lot with Serbia."
+aus.tree.4030.a:0 "To Athens once more."
+
+aus.tree.4031.t:0 "A Facsimile from Vienna"
+aus.tree.4031.d:0 "Austria has rekindled her policy of acting as a "Protector of the Balkans", formally invites us to their faction. As such, we would be under their protection."
 aus.tree.4031.a:0 "It's good to have protection."
 aus.tree.4031.b:0 "We're doing well on our own."
 
 aus.tree.4032.t:0 "[From.GetNameDef] declines."
+aus.tree.4032.d:0 "[From.GetLeader] has let us know that his country has no interest in our offer of protection. [From.GetNameDef] will not be part of our sphere."
+aus.tree.4032.a:0 "Well then."
+
 aus.tree.4033.t:0 "[From.GetNameDef] agrees to join our Sphere."
+aus.tree.4033.d:0 "[From.GetLeader] has let us know that his country is looking forward to closer coopertaion. [Root.GetAdjective]-[From.GetAdjective] Relationships are off to a good start."
+aus.tree.4033.a:0 "Splendid."
 
 
-aus.tree.4040.t:0 "The Romanian Question"
-aus.tree.4041.t:0 "Austria invites us to their Faction"
+aus.tree.4040.t:0 "Our Interests in Romania"
+aus.tree.4040.d:0 "Having helped the Romanian King re-gain control of his country, asking them to formally join our sphere of protection is a mere formality. May this alliance lead to more."
+aus.tree.4040.a:0 "An eternal friendship."
+
+aus.tree.4041.t:0 "A Facsimile from Vienna"
+aus.tree.4041.d:0 "Austria has rekindled her policy of acting as a "Protector of the Balkans", formally invites us to their faction. As such, we would be under their protection."
 aus.tree.4041.a:0 "It's good to have protection."
 aus.tree.4041.b:0 "We're doing well on our own."
 
 aus.tree.4042.t:0 "[From.GetNameDef] declines."
+aus.tree.4042.d:0 "[From.GetLeader] has let us know that his country has no interest in our offer of protection. [From.GetNameDef] will not be part of our sphere."
+aus.tree.4042.a:0 "Well then."
+
 aus.tree.4043.t:0 "[From.GetNameDef] agrees to join our Sphere."
+aus.tree.4043.d:0 "[From.GetLeader] has let us know that his country is looking forward to closer coopertaion. [Root.GetAdjective]-[From.GetAdjective] Relationships are off to a good start."
+aus.tree.4043.a:0 "Splendid."
